# Chronos

./: .gitignore  README.md  UPLOAD_API.md  pyproject.toml
scripts/: deb_dg.py  ingest.py  mic_client.py  test_client.py  test_upload.py
src/: main.py
src/api/: auth.py  deps.py  routes.py  upload.py  websocket.py
src/brain/: graph.py  retriever.py  state.py
src/core/: config.py  control.py  interfaces.py  logger.py  security.py
src/db/: crud.py  database.py  models.py
src/services/: asr.py  llm.py  mock_services.py  tts.py
src/transport/: connection_mgr.py
streamlit/: README.md  app.py  auth_components.py  auth_utils.py
tests/: test_brain.py  test_rag.py
