[tool.poetry]
name = "chronos"
version = "0.2.0"
description = "Voice RAG Orchestrator"
authors = ["Asif"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
websockets = "^12.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.2.0"

# --- AI & Logic ---
# We use LangGraph 0.2+ for the stable StateGraph API
langgraph = "^0.2.0"
langchain-core = "^0.2.0"
langchain-openai = "^0.1.0"

# --- Voice Services ---
# Deepgram v3.2+ is required for the Enum fix
deepgram-sdk = "^3.2.0"
openai = "^1.30.0"

# --- Data & Utilities ---
redis = "^5.0.4"
numpy = "^1.26.0"
watchfiles = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"